--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-    <section>
-        <div class="popupImg">
+    <img src="red-panda-6.jpg" alt="Red panda 6" class="fixedPanda">
+    <section class="container">
+        <div class="carre">
             <img src="red-panda-1.jpg" alt="">
             <img src="red-panda-2.jpg" alt="">
-            <img src="red-panda.3.jpg" alt="">
+            <img src="red-panda-3.jpg" alt="">
             <img src="red-panda-4.jpg" alt="">
         </div>
     </section>
