--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
             <img src="red-panda-4.jpg" alt="">
         </div>
     </section>
+
+    <section class="secTitle">
+        <div class="images">
+            <img src="red-panda-5.jpg" alt="" style="width: 300px;flex: 1 0 0%;">
+        </div>
+        <div class="text">
+            <h1>Les Pandas-Roux</h1>
+            <h3>A quel point sont-ils exceptionnels ?</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa at facilis ex doloremque, rerum unde
+                velit
+                nulla placeat aspernatur fugiat maiores quia ad adipisci cum optio aut alias doloribus esse!
+            </p>
+        </div>
+    </section>
 </body>
 
 </html>
