--- a/html/index.html
+++ b/html/index.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1280px, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Veepee</title>
 </head>
 
 <body>
-    <img src="red-panda-6.jpg" alt="Red panda 6" class="fixedPanda">
+    <img src="../images/red-panda-6.jpg" alt="Red panda 6" class="fixedPanda">
     <section class="container">
         <div class="carre">
-            <img src="red-panda-1.jpg" alt="">
-            <img src="red-panda-2.jpg" alt="">
-            <img src="red-panda-3.jpg" alt="">
-            <img src="red-panda-4.jpg" alt="">
+            <img src="../images/red-panda-1.jpg" alt="">
+            <img src="../images/red-panda-2.jpg" alt="">
+            <img src="../images/red-panda-3.jpg" alt="">
+            <img src="../images/red-panda-4.jpg" alt="">
         </div>
     </section>
 
     <section class="secTitle">
         <div class="images">
-            <img src="red-panda-5.jpg" alt="" style="width: 300px;flex: 1 0 0%;">
+            <img src="../images/red-panda-5.jpg" alt="" style="width: 300px;flex: 1 0 0%;">
         </div>
         <div class="text">
             <h1>Les Pandas-Roux</h1>
