--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 
     <section class="secTitle">
         <div class="images">
-            <img src="../images/red-panda-5.jpg" alt="" style="width: 300px;flex: 1 0 0%;">
+            <img src="../images/red-panda-5.jpg" alt="">
         </div>
         <div class="text">
             <h1>Les Pandas-Roux</h1>
