--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
 
     <section class="secTitle">
         <div class="images">
-            <img src="../images/red-panda-5.jpg" alt="">
+            <img class="image5" src="../images/red-panda-5.jpg" alt="">
         </div>
         <div class="text">
             <h1>Les Pandas-Roux</h1>
@@ -35,5 +35,6 @@
         </div>
     </section>
 </body>
+
 
 </html>
