--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1280px, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/css2.css">
+
     <title>Veepee</title>
 </head>
 
